# chess-terminal

./: CMakeLists.txt  README.md
src/: bishop.cpp  board.cpp  chess.cfg  game.cpp  king.cpp  king.hpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  queen.hpp  renderer.cpp  rook.cpp
src/include/: bishop.hpp  board.hpp  game.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  renderer.hpp  rook.hpp
tests/renderer/: Makefile  chess.cfg  test.cpp
